--- a/animationShowreel.html
+++ b/animationShowreel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="">
 <head>
-    <title>Page Title</title>
+    <title>Animation Showreel</title>
     <link rel="stylesheet" href="mystyle.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
