--- a/Pinball.html
+++ b/Pinball.html
@@ -11,42 +11,41 @@
     <div id="navbar-container">
     </div>
     <div>
-        <h4>Photoshop Art</h4>
-        <p>
-            This is where examples of my artwork with photoshop are shown, these have been made using reference art
-            pieces.
-        </p>
+        <h4>Pinball (UE4)</h4>
     </div>
-    <hr class="rounded">
     <div>
-        <h4>2D Art</h4>
         <p>
-            I wanted to expand on my skills with photoshop for games so I decided to research 2D background art and
-            single pane images that could be used for title screens. After following some tutorials and finding some
-            images I wanted to see if I could recreate some of the artwork I'd seen during my research. These are the
-            results.
+            The completion of this project was down to the help of a Pinball course on Udemy. It was completed over a
+            couple days of work as a practice for the GamDev.tv game jam. All models and textures were downloaded with
+            the course.
         </p>
-        <div class="threePhoto">
-            <img src="Images/Photoshop/NightLake.png" alt="Images/ForestHeader.jpg">
-            <img src="Images/Photoshop/MoonForest.png" alt="Images/ForestHeader.jpg">
-            <img src="Images/Photoshop/RedMountain.png" alt="Images/ForestHeader.jpg">
-            <img src="Images/Photoshop/ThreeDHouse.png" alt="Images/ForestHeader.jpg">
+        <div class="slideshow-container">
+
+            <div class="mySlides fade">
+                <div class="numbertext">1 / 4</div>
+                <img src="Images/Pinball/image1.png" alt="Images/ForestHeader.jpg">
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">2 / 4</div>
+                <img src="Images/Pinball/image2.png" alt="Images/ForestHeader.jpg">
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 4</div>
+                <img src="Images/Pinball/image3.png" alt="Images/ForestHeader.jpg">
+            </div>
+            <div class="mySlides fade">
+                <div class="numbertext">4 / 4</div>
+                <img src="Images/Pinball/image4.png" alt="Images/ForestHeader.jpg">
+            </div>
         </div>
-    </div>
-    <hr class="rounded">
-    <div>
-        <h4>VFX Textures</h4>
-        <p>
-            These textures were created for a fire VFX explosion in UE4, the black has been added to make the texture
-            more visible, normally they would be transparent.
-        </p>
-        <div class="threePhoto">
-            <img src="Images/Photoshop/Beam.jpg" alt="Images/ForestHeader.jpg">
-            <img src="Images/Photoshop/FireImpact2.jpg" alt="Images/ForestHeader.jpg">
-            <img src="Images/Photoshop/FireImpact3.jpg" alt="Images/ForestHeader.jpg">
-        </div>
+        <br>
+        <iframe id="youtubeLink" src="https://www.youtube.com/embed/L-xF1QEQF38" allowfullscreen>
+        </iframe>
     </div>
 </div>
 </body>
 </html>
 <script src="createNavigationBar.js"></script>
+<script src="AutomaticSlideShow.js"></script>
