updated unreal workshop

--- a/UnrealWorkshop.html
+++ b/UnrealWorkshop.html
@@ -22,46 +22,138 @@
     </div>
     <hr class="rounded">
     <h1>Week 1</h1>
-    <p>
-        First week was to learn how to use the third person template and basic blueprints. I decided to add an avatar
-        downloaded from Mixamo and learn how to use the animation blueprint for basic movement including a roll. Final
-        addition for the week I added a grapple hook and basic ragdoll physics.
-    </p>
+    <div class="split">
+
+        <p>
+            First week was to learn how to use the third person template and basic blueprints. I decided to add an
+            avatar
+            downloaded from Mixamo and learn how to use the animation blueprint for basic movement including a roll.
+            Final
+            addition for the week I added a grapple hook and basic ragdoll physics.
+        </p>
+        <div class="slideshow-container">
+
+            <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img src="Images/UnrealWorkshop/Week1/image1.png" alt="Images/ForestHeader.jpg">
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img src="Images/UnrealWorkshop/Week1/image2.png" alt="Images/ForestHeader.jpg">
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img src="Images/UnrealWorkshop/Week1/image3.png" alt="Images/ForestHeader.jpg">
+            </div>
+
+        </div>
+    </div>
     <hr class="rounded">
     <h1>Week 2
     </h1>
-    <p>
-        This week started off with adding pickups that do something when the user walked into the trigger box, for this
-        example I changed the jump height of the character on pickup. The largest addition was the use of event
-        dispatchers to cause events to trigger throughout the blueprints. Finally, I added a trigger to the fire
-        particle system from the starter content to trigger when a character walked inside the range and set the
-        character on fire.<br><br>
 
-        This week had to be cut short to allow for some planning for the upcoming game jam.
-    </p>
+    <div class="split">
+        <p>
+            This week started off with adding pickups that do something when the user walked into the trigger box, for
+            this
+            example I changed the jump height of the character on pickup. The largest addition was the use of event
+            dispatchers to cause events to trigger throughout the blueprints. Finally, I added a trigger to the fire
+            particle system from the starter content to trigger when a character walked inside the range and set the
+            character on fire.<br><br>
+
+            This week had to be cut short to allow for some planning for the upcoming game jam.
+        </p>
+        <div class="slideshow-container">
+
+            <div class="mySlides fade">
+                <div class="numbertext">1 / 2</div>
+                <img src="Images/UnrealWorkshop/Week2/image1.png" alt="Images/ForestHeader.jpg">
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">2 / 2</div>
+                <img src="Images/UnrealWorkshop/Week2/image2.png" alt="Images/ForestHeader.jpg">
+            </div>
+        </div>
+    </div>
     <hr class="rounded">
     <h1>
         Week 3
     </h1>
-    <p>
-        Week 3 started with adding menu systems to the game such as a main menu and a pause menu. Once the menus were in
-        the environment was looking very plain so I decided to look into the foliage tool and landscape materials. This
-        is where I learned how to create a procedural terrain painter that worked of the angle of the ground. Using the
-        materials for the terrain I could also add small foliage that only spawned on the green land.<br><br>
+    <div class="split">
+        <p>
+            Week 3 started with adding menu systems to the game such as a main menu and a pause menu. Once the menus
+            were in
+            the environment was looking very plain so I decided to look into the foliage tool and landscape materials.
+            This
+            is where I learned how to create a procedural terrain painter that worked of the angle of the ground. Using
+            the
+            materials for the terrain I could also add small foliage that only spawned on the green land.<br><br>
 
-        Lastly for the week was to add a Hud with health and a scoring system using the coins.
-    </p>
+            Lastly for the week was to add a Hud with health and a scoring system using the coins.
+        </p>
+        <div class="slideshow-container">
+
+            <div class="mySlides fade">
+                <div class="numbertext">1 / 4</div>
+                <img src="Images/UnrealWorkshop/Week3/image1.png" alt="Images/ForestHeader.jpg">
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">2 / 4</div>
+                <img src="Images/UnrealWorkshop/Week3/image2.png" alt="Images/ForestHeader.jpg">
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 4</div>
+                <img src="Images/UnrealWorkshop/Week3/image3.png" alt="Images/ForestHeader.jpg">
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">4 / 4</div>
+                <img src="Images/UnrealWorkshop/Week3/image4.png" alt="Images/ForestHeader.jpg">
+            </div>
+        </div>
+    </div>
     <hr class="rounded">
     <h1>
         Week 4
     </h1>
-    <p>
-        This week was all about AI, following the mini course I created a basic twin stick shooter. During this I learnt
-        how to use blackboard, behaviour trees and AI components. I created a basic AI that would chase the player
-        wherever he is on the map. On contact the enemy would do damage to the player who would die after a certain
-        amount of damage was sustained.
-    </p>
+    <div class="split">
+        <p>
+            This week was all about AI, following the mini course I created a basic twin stick shooter. During this I
+            learnt
+            how to use blackboard, behaviour trees and AI components. I created a basic AI that would chase the player
+            wherever he is on the map. On contact the enemy would do damage to the player who would die after a certain
+            amount of damage was sustained.
+        </p>
+        <div class="slideshow-container">
+
+            <div class="mySlides fade">
+                <div class="numbertext">1 / 4</div>
+                <img src="Images/UnrealWorkshop/Week4/image1.png" alt="Images/ForestHeader.jpg">
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">2 / 4</div>
+                <img src="Images/UnrealWorkshop/Week4/image2.png" alt="Images/ForestHeader.jpg">
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 4</div>
+                <img src="Images/UnrealWorkshop/Week4/image3.png" alt="Images/ForestHeader.jpg">
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">4 / 4</div>
+                <img src="Images/UnrealWorkshop/Week4/image4.png" alt="Images/ForestHeader.jpg">
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
 <script src="createNavigationBar.js"></script>
+<script src="AutomaticSlideShow.js"></script>
