--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h4>About</h4>
         <p>
             I am focused on enhancing human-computer interfaces and creating seamless user experiences through
-            technology. With expertise in programming, 3D modeling, and effects, I’ve developed and released the game
+            technology. With expertise in programming, 3D modeling, and effects, I helped developed and release the game
             "Duck Life 9," which received an 89% positive rating on Steam. My work at Wix Games has involved designing
             and implementing complex gameplay elements, AI, and UI using Unity (C#), demonstrating my commitment to
             developing intuitive and engaging applications. <br> <br>
